// hello_world.proto

syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/abitofhelp/bazel_grpc_pbuf_go";

// Greeter Service
service Greeter {
  // Send a greeting.
  rpc SayHello (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post : "/v1/hello"
      body: "*"
    };
  }
}

// The request message contains the user's name.
message HelloRequest {
  string name = 1;
  google.protobuf.Timestamp sent_utc = 2;
}

// The response message contains the greeting.
message HelloResponse {
  string message = 1;
  google.protobuf.Timestamp message_arrived_utc = 2;
  google.protobuf.Timestamp replied_utc = 3;
}